force-app/main/default/objects/Case/fields/DRC_Lot_Complaint_Quantiy_Info__c.field-meta.xml
<CustomField>
    <fullName>DRC_Lot_Complaint_Quantiy_Info__c</fullName>
    <label>Lot Complaint Quantiy Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>