force-app/main/default/objects/Case/fields/DRC_NBC_Action_Inititated_By_DRC__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Action_Inititated_By_DRC__c</fullName>
    <label>Action Inititated By DRC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>