force-app/main/default/objects/Case/fields/DRC_NBC_CAPA_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_CAPA_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAPA File Uploaded?</label>
    <type>Checkbox</type>
</CustomField>