force-app/main/default/objects/Case/fields/DRC_NBC_Invoice__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>DRC_NBC_Invoice__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>