force-app/main/default/objects/Case/fields/DRC_NBCPreferred_Resolution_to_Customers__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBCPreferred_Resolution_to_Customers__c</fullName>
    <label>Preferred Resolution to Customers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>