force-app/main/default/objects/Case/validationRules/DRC_NBC_Account_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>DRC_NBC_Account_Name</fullName>
    <active>true</active>
    <description>This rule is created to validate account name field should not be blank</description>
    <errorConditionFormula>ISBLANK( AccountId )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please select corresponding account</errorMessage>
</ValidationRule>