force-app/main/default/objects/Case/validationRules/DRC_NBC_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>DRC_NBC_Description</fullName>
    <active>true</active>
    <description>This rule is created to validate description field should not be blank</description>
    <errorConditionFormula>ISBLANK( Description )</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Please enter description</errorMessage>
</ValidationRule>