force-app/main/default/objects/Case/validationRules/DRC_NBC_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>DRC_NBC_Invoice</fullName>
    <active>false</active>
    <description>This rule is created to validate invoice field should not be blank</description>
    <errorConditionFormula>ISBLANK( DRC_NBC_Invoice__c )</errorConditionFormula>
    <errorDisplayField>DRC_NBC_Invoice__c</errorDisplayField>
    <errorMessage>Please select corresponding invoice</errorMessage>
</ValidationRule>