force-app/main/default/objects/Case/validationRules/DRC_NBC_Other_Issue_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>DRC_NBC_Other_Issue_Type</fullName>
    <active>false</active>
    <description>This rule is created to validate if issue type is other then description field should not be empty</description>
    <errorConditionFormula>AND(
ISPICKVAL( DRC_NBC_Issue_type__c , &quot;Others&quot;),
ISBLANK( Description )
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>As Issue type is &quot;other&quot; please enter the description about the issue</errorMessage>
</ValidationRule>