force-app/main/default/objects/Case/validationRules/DRC_NBC_Priority.validationRule-meta.xml
<ValidationRule>
    <fullName>DRC_NBC_Priority</fullName>
    <active>true</active>
    <description>This rule is created to validate priority field should not be blank</description>
    <errorConditionFormula>ISBLANK(TEXT( Priority ))</errorConditionFormula>
    <errorDisplayField>Priority</errorDisplayField>
    <errorMessage>Please select priority</errorMessage>
</ValidationRule>